[gd_scene load_steps=11 format=3 uid="uid://c5mvik6vc02j3"]

[ext_resource type="Script" path="res://src/main/scene/level/plane/missle.gd" id="1_khvt0"]
[ext_resource type="Texture2D" uid="uid://dxqk8y8v5lu7w" path="res://src/main/assets/texture/role/enemy/missile.png" id="1_xuysb"]
[ext_resource type="Texture2D" uid="uid://bov470p7isauo" path="res://src/main/assets/texture/particle/explosion/explosionSmoke1.png" id="2_53pkf"]
[ext_resource type="Texture2D" uid="uid://kj63w4yado1w" path="res://src/main/assets/texture/particle/explosion/explosionSmoke2.png" id="3_6vhwx"]
[ext_resource type="Texture2D" uid="uid://cpmgdhmhgb5iq" path="res://src/main/assets/texture/particle/explosion/explosionSmoke3.png" id="4_e7lyu"]
[ext_resource type="Texture2D" uid="uid://cjg8g6edatwqh" path="res://src/main/assets/texture/particle/explosion/explosionSmoke4.png" id="5_0885r"]
[ext_resource type="Texture2D" uid="uid://d208faequm1f4" path="res://src/main/assets/texture/particle/explosion/explosionSmoke5.png" id="6_02fox"]
[ext_resource type="PackedScene" uid="uid://fve07w7ya3na" path="res://src/main/scene/level/plane/tail_gas.tscn" id="7_iobbk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ddilk"]
size = Vector2(33, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_yg1pv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_53pkf")
}, {
"duration": 1.0,
"texture": ExtResource("3_6vhwx")
}, {
"duration": 1.0,
"texture": ExtResource("4_e7lyu")
}, {
"duration": 1.0,
"texture": ExtResource("5_0885r")
}, {
"duration": 1.0,
"texture": ExtResource("6_02fox")
}],
"loop": false,
"name": &"explosion",
"speed": 30.0
}]

[node name="Missle" type="Node2D"]
script = ExtResource("1_khvt0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_xuysb")

[node name="Area2D" type="Area2D" parent="." groups=["missle"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(6.5, 0)
shape = SubResource("RectangleShape2D_ddilk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(17, 0)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_yg1pv")
animation = &"explosion"
frame = 4
frame_progress = 1.0

[node name="Timer" type="Timer" parent="."]

[node name="TailGas" parent="." instance=ExtResource("7_iobbk")]
position = Vector2(-23, 0)
scale = Vector2(0.5, 0.5)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
